Fix Tailwind CSS path for Vercel

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BRUUUHAUTH</title>
   <link rel="stylesheet" href="../dist/output.css" />
+  <link rel="stylesheet" href="output.css" />
 </head>
 <body class="bg-gray-900 text-white flex flex-col items-center justify-center h-screen gap-4">
   <h1 class="text-4xl font-bold mb-6">Welcome to BRUUUHAUTH</h1>
