--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,10 +16,16 @@
 </body>
 
 <script type="module">
-  import { account } from "../src/utils/appwrite.js";
+  import { Client, Account } from "https://cdn.jsdelivr.net/npm/appwrite@13.0.1/+esm";
+
+  const client = new Client()
+    .setEndpoint("https://cloud.appwrite.io/v1") // Use your endpoint
+    .setProject("bruuuhauth"); // Replace with your real Project ID
+
+  const account = new Account(client);
 
   window.loginWith = (provider) => {
-    account.createOAuth2Session(provider);
+    account.createOAuth2Session(provider, "https://bruuuhauth.vercel.app");
   };
 
   try {
@@ -40,6 +46,7 @@
     console.log("No user session yet. Waiting for login.");
   }
 </script>
+
 
 
 </html>
