--- a/frontend/public/setup.html
+++ b/frontend/public/setup.html
@@ -19,5 +19,22 @@
   </div>
 
   <script type="module" src="scripts.js"></script>
+  <script type="module">
+    import { Client, Account } from "https://cdn.jsdelivr.net/npm/appwrite@13.0.1/+esm";
+  
+    const client = new Client()
+      .setEndpoint("https://cloud.appwrite.io/v1")
+      .setProject("bruuuhauth");
+  
+    const account = new Account(client);
+  
+    try {
+      const user = await account.get();
+      sessionStorage.setItem("userReady", "yes");
+    } catch (err) {
+      console.error("OAuth session not restored yet:", err.message);
+    }
+  </script>
+  
 </body>
 </html>
