--- a/frontend/public/login/login.html
+++ b/frontend/public/login/login.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login | BRUUUHAUTH</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 </head>
 <body>
     <script>
@@ -22,7 +22,7 @@
           document.getElementById('navbar-placeholder').innerHTML = html;
         });
     </script>
-    <link rel="stylesheet" href="mainnav.css">
+    <link rel="stylesheet" href="styles/mainnav.css">
   
     <div class="page-wrapper">
       <div class="login-container">
@@ -38,9 +38,9 @@
             <button class="login-btn">Login Now → </button>
             <div class="divider">---------------- OR ----------------</div>
             <div class="oauth-icons">
-                <img src="img/google32bg.png" alt="Google" onclick="loginWith('google')"/>
-                <img src="img/discord32.png" alt="Discord" onclick="loginWith('discord')"/>
-                <img src="img/github32bg.png" alt="GitHub" onclick="loginWith('github')"/>
+                <img src="../img/google32bg.png" alt="Google" onclick="loginWith('google')"/>
+                <img src="../img/discord32.png" alt="Discord" onclick="loginWith('discord')"/>
+                <img src="../img/github32bg.png" alt="GitHub" onclick="loginWith('github')"/>
             </div>
         
             <div class="links">
@@ -49,6 +49,6 @@
           </div>
     </div>
   
-    <script type="module" src="scripts.js"></script>
+    <script type="module" src="scripts/scripts.js"></script>
   </body>
 </html>
