--- a/frontend/public/login/mainnav.html
+++ b/frontend/public/login/mainnav.html
@@ -1,7 +1,7 @@
 <nav class="main-navbar">
     <div class="nav-left">
       <a href="home.html" class="logoleft">
-        <img src="img/favicon.ico" alt="Logo" class="logo-icon" style="width: 40px; height: 40px; vertical-align: middle;">
+        <img src="../img/favicon.ico" alt="Logo" class="logo-icon" style="width: 40px; height: 40px; vertical-align: middle;">
         BRUUUHAUTH
       </a>
     </div>
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
   
     <ul class="nav-center">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Features</a></li>
-      <li><a href="#">Documentation</a></li>
-      <li><a href="#">Pricing</a></li>
+      <li><a href="">Home</a></li>
+      <li><a href="">Features</a></li>
+      <li><a href="">Documentation</a></li>
+      <li><a href="">Pricing</a></li>
     </ul>
   
     <div class="nav-right">
