--- a/frontend/public/login/register.html
+++ b/frontend/public/login/register.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register | BRUUUHAUTH</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 </head>
 <body>
     <script>
@@ -21,7 +21,7 @@
             document.getElementById('navbar-placeholder').innerHTML = html;
           });
       </script>
-      <link rel="stylesheet" href="mainnav.css">
+      <link rel="stylesheet" href="styles/mainnav.css">
       <div class="page-wrapper">
 
         <div class="register-container">
