--- a/frontend/public/login/reset.html
+++ b/frontend/public/login/reset.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Reset Password | BRUUUHAUTH</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles/style.css" />\
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 </head>
 <body>
 
@@ -21,7 +22,7 @@
         document.getElementById('navbar-placeholder').innerHTML = html;
       });
   </script>
-  <link rel="stylesheet" href="mainnav.css">
+  <link rel="stylesheet" href="styles/mainnav.css">
 
   <div class="page-wrapper">
 
@@ -34,7 +35,7 @@
       <button class="reset-btn" onclick="resetPassword()">Reset Password</button>
       <div class="links">
         <span>Already have an account ? |</span> <a href="login.html">Sign In</a><br><br>
-        <span>Don't have an account ? |</span> <a href="resgiter.html">Sign Up</a>
+        <span>Don't have an account ? |</span> <a href="register.html">Sign Up</a>
       </div>
     </div>
 
