--- a/frontend/public/login/verify.html
+++ b/frontend/public/login/verify.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BRUUUHAUTH | Verify</title>
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="output.css" />
+  <link rel="icon" href="../img/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="styles/output.css" />
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 
   <style>
