--- a/frontend/public/login/register.html
+++ b/frontend/public/login/register.html
@@ -36,9 +36,9 @@
           <button class="login-btn">Register → </button>
           <div class="divider">---------------- OR ----------------</div>
           <div class="oauth-icons">
-              <img src="img/google32bg.png" alt="Google" onclick="loginWith('google')"/>
-              <img src="img/discord32.png" alt="Discord" onclick="loginWith('discord')"/>
-              <img src="img/github32bg.png" alt="GitHub" onclick="loginWith('github')"/>
+              <img src="../img/google32bg.png" alt="Google" onclick="loginWith('google')"/>
+              <img src="../img/discord32.png" alt="Discord" onclick="loginWith('discord')"/>
+              <img src="../img/github32bg.png" alt="GitHub" onclick="loginWith('github')"/>
           </div>
       
           <div class="links">
