--- a/frontend/public/login/register.html
+++ b/frontend/public/login/register.html
@@ -48,6 +48,6 @@
 
 
       </div>
-  <script type="module" src="scripts.js"></script>
+  <script type="module" src="scripts/scripts.js"></script>
 </body>
 </html>
